# ludi

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
ludi/: Cargo.toml
ludi-core/: Cargo.toml
ludi-core/src/: address.rs  channel.rs  envelope.rs  error.rs  futures.rs  lib.rs  mailbox.rs
ludi-core/tests/: api.rs
ludi-macros/: Cargo.toml
ludi-macros-test/: Cargo.toml
ludi-macros-test/src/: lib.rs
ludi-macros-test/tests/: controller.rs  implement_async_trait.rs  implement_basic.rs  implement_trait.rs  implement_trait_foreign.rs  interface_async_trait.rs  interface_basic.rs  message_enum.rs  message_struct.rs  message_struct_unit.rs  wrap.rs
ludi-macros/src/: controller.rs  implement.rs  interface.rs  lib.rs  message.rs  options.rs  types.rs  utils.rs  wrap.rs
ludi-macros/src/items/: item_impl.rs  item_trait.rs  method.rs  mod.rs
ludi/examples/: simple.rs
ludi/src/: lib.rs
