[package]
name = "ludi-macros-test"
version = "0.0.0"
edition = "2021"

[dependencies]
ludi = { path = "../ludi" }

[dev-dependencies]
ludi-macros = { path = "../ludi-macros" }
async-trait = "0.1"

[[test]]
name = "message_struct"
path = "tests/message_struct.rs"

[[test]]
name = "message_struct_unit"
path = "tests/message_struct_unit.rs"

[[test]]
name = "message_enum"
path = "tests/message_enum.rs"

[[test]]
name = "interface_basic"
path = "tests/interface_basic.rs"

[[test]]
name = "interface_async_trait"
path = "tests/interface_async_trait.rs"

[[test]]
name = "implement_basic"
path = "tests/implement_basic.rs"

[[test]]
name = "implement_trait"
path = "tests/implement_trait.rs"

[[test]]
name = "implement_async_trait"
path = "tests/implement_async_trait.rs"

[[test]]
name = "implement_trait_foreign"
path = "tests/implement_trait_foreign.rs"
